# hg_chat_with_model

./: .gitignore  README.md  pyproject.toml
src/hg_chat_with_model/: __main__.py  data_processing.py  hg_api_calls.py
